fix(Logout button) logout button position; overflow

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -10,11 +10,12 @@
     box-shadow: 2px 0px 10px 0px #CCC;
     gap: 1.25rem;
     box-sizing: border-box;
+    position: relative;
 }
 
 .navbar-logo {
-    width: 6.5rem;
-    height: 2.5rem;
+    width: 150px;
+    height: 150px;
 }
 
 .buttons-wrapper {
@@ -55,5 +56,7 @@
 
 #logout-button {
     color: red;
+    position: absolute;
+    bottom: 0;
 
 }
