--- a/frontend/src/pages/Home/Board/Board.css
+++ b/frontend/src/pages/Home/Board/Board.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     box-sizing: border-box;
     gap: 2rem;
+    overflow: hidden;
 }
 
 #board-wrapper label {
